FEW-61 -- Change text sizes on Vantis questionnaire, FEW-68 -- Alignment issue on occupation field

--- a/code/src/css/asynCustomSelect.scss
+++ b/code/src/css/asynCustomSelect.scss
@@ -6,13 +6,21 @@
         margin-left: 15px;
     }
     .input-group.input-group-toggle {
-        padding-left: 15px;
+        padding-left: 0px;
     }
     .autosuggest {
         .input-group-btn {
             button {
                 height: 44px;
             }
+        }
+        .dropdown-menu {
+            font-size: 16px;
+        }
+    }
+    .autosuggest-choice-label {
+        .tag {
+            font-size: 16px;
         }
     }
     input {
@@ -22,10 +30,16 @@
         border: solid 1px #cccccc;
     }
     .autosuggest-choices {
+        .autosuggest-input-choice {
+            input {
+                font-size: 16px;
+                padding-top: 8px;
+            }
+        }
         padding-top: 0px;
         height: 44px;
         .autosuggest-choice {
-            margin-top: 13px;
+            margin-top: 12px;
             margin-left: 10px;
         }
     }
