--- a/code/src/css/question.scss
+++ b/code/src/css/question.scss
@@ -1,4 +1,19 @@
+.fs18 {
+    font-size: 18px!important;
+}
+.fs16 {
+    font-size: 16px!important;
+}
+
 .questions-container {
+    .Select-control {
+        .Select-placeholder {
+            font-size: 16px!important;
+        }
+    }
+    .Select-value-label {
+        font-size: 16px!important;
+    }
     .siblings-container {
         border-radius: 3px;
         background-color: #ffffff;
@@ -13,6 +28,7 @@
         button {
             text-transform: uppercase;
         }
+        padding-top: 15px;
     }
     .Select-placeholder {
         padding-top: 4px;
@@ -39,7 +55,7 @@
     }
     .form-group {
         label {
-            font-size: 14px;
+            font-size: 18px;
             line-height: 1.5;
             text-align: left;
             color: #666666;
